[package]
name = "SFTP-rustified"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
dotenv = "0.15.0"
russh = "0.46.0"
russh-keys = "0.46.0"
russh-sftp = "2.0.6"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
async-trait = "0.1.83"
